# project-sia

./: .gitignore  readme.md
llm-tts/: api.py
llm-tts-prev/: .env.template  agents.py  crew.py  pyproject.toml  tasks.py
sia-speech-to-text/: package-lock.json  package.json  tailwind.config.js
sia-speech-to-text/src/: store.js
sia-speech-to-text/src/app/: layout.js  page.js
sia-speech-to-text/src/app/api/speechToText/: route.js
sia-speech-to-text/src/app/components/: ChatBox.js  IconMicrophone.js  Microphone.js
sia-speech-to-text/src/app/config/: env.js
sia-speech-to-text/src/hooks/: useRecordVoice.js
