[tool.poetry]
name = "sia-pi-llm-tts"
version = "0.1.0"
description = "SIA PI LLM TTS"
authors = ["Omor"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.30.0"
unstructured = '==0.10.25'
pyowm = "3.3.0"
tools = "^0.1.9"
python-dotenv = "1.0.0"
langchain-groq = "^0.1.4"
crewai-tools = "^0.2.6"
flask = "^3.0.3"
flask-cors = "^4.0.1"

[tool.poetry.plugins.dotenv]
location = ".env"


[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E','W','F','I','B','C4','ARG','SIM']
ignore = ['W291','W292','W292']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"